--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "next": "12.0.3",
     "react": "17.0.2",
     "react-dom": "17.0.2",
+    "react-feather": "^2.0.9",
     "react-icons": "^4.3.1"
   },
   "devDependencies": {
