--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "react-dom": "17.0.2",
     "react-feather": "^2.0.9",
     "react-icons": "^4.3.1",
+    "react-messenger-chat-plugin": "^1.0.9",
     "react-slick": "^0.28.1",
     "slick-carousel": "^1.8.1"
   },
